--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,9 @@ edition = "2021"
 #
 # DON'T EDIT THIS!
 [dependencies]
-anyhow = "1.0.59"                                   # error handling
-bytes = "1.3.0"                                     # helps manage buffers
-thiserror = "1.0.32"                                # error handling
+bytes = "1.3.0"                                             # helps manage buffers
+regex = "1.11.0"                                            # async networking
+anyhow = "1.0.59"                                           # error handling
+thiserror = "1.0.32"                                        # error handling
 tokio = { version = "1.23.0", features = ["full"] }
-regex = "1.11.0" # async networking
+clap = { version = "4.5.20", features = ["env", "derive"] }
