--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,10 @@ edition = "2021"
 #
 # DON'T EDIT THIS!
 [dependencies]
-bytes = "1.3.0"                                             # helps manage buffers
-regex = "1.11.0"                                            # async networking
-anyhow = "1.0.59"                                           # error handling
-thiserror = "1.0.32"                                        # error handling
-tokio = { version = "1.23.0", features = ["full"] }
-clap = { version = "4.5.20", features = ["env", "derive"] }
+bytes = "1.10.1"                                            # helps manage buffers
+regex = "1.11.1"                                            # async networking
+anyhow = "1.0.98"                                           # error handling
+thiserror = "2.0.12"                                        # error handling
+futures = "0.3.31"                                          # async programming
+tokio = { version = "1.45.0", features = ["full"] }
+clap = { version = "4.5.37", features = ["env", "derive"] }
