--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ futures = "0.3.31"                                          # async programming
 tokio = { version = "1.45.0", features = ["full"] }
 clap = { version = "4.5.37", features = ["env", "derive"] }
 chrono = "0.4.41"
+rand = "0.9.1"
