--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ tokio = { version = "1.45.0", features = ["full"] }
 clap = { version = "4.5.37", features = ["env", "derive"] }
 chrono = "0.4.41"
 rand = "0.9.1"
+hex = "0.4.3"
